--- a/hanzitn/assets/bootstrap.css
+++ b/hanzitn/assets/bootstrap.css
@@ -1,5 +1,5 @@
-@import url("http://fonts.googleapis.com/css?family=Lobster");
-@import url("http://fonts.googleapis.com/css?family=Lato");
+@import url("//fonts.googleapis.com/css?family=Lobster");
+@import url("//fonts.googleapis.com/css?family=Lato");
 /*!
  * Default theme for Pingendo 
  * Homepage: http://pingendo.com  
